# LilinVision

./: .gitignore  .gitmodules  AGENT.md  GEMINI.md  errors installing in a new system
LilinVision-Web/: index.html  package-lock.json  package.json
LilinVision-Web/src/: App.tsx
LilinVision-Web/src/components/: Cameras.tsx  Dashboard.tsx  Database.tsx  Settings.tsx
dependencies/: zoneminder.md
index/: DEPENDENCY_LOGGING_FIX.md  INDEX.md  README_DARKHELP.md  README_DARKNET.md  dependencies-darkhelp.md  dependencies-darknet.md  distribution-Compatibility_Guide.md  mac-arm-orbstack-build-guide.md  research-VMS_Lite_Architecture.md  research-VMS_Lite_Architecture_Recommendations.md  research-Web_react_guide.md  vms-lite-ARCHITECTURE_ANALYSIS.md  vms-lite-IMPLEMENTATION_PLAN.md  vms-lite-PATH_RESOLUTION.md  vms-lite-README.md  vms-lite-WEB_GUI_ARCHITECTURE.md
research/: Darknet_DarkHelp_Build_Guide.md  VMS_Lite_Architecture.md  Web_react_guide.md
visionguard/client/: index.html
visionguard/client/src/: App.tsx  index.css
visionguard/client/src/components/: Sidebar.tsx
visionguard/client/src/lib/: queryClient.ts
visionguard/client/src/pages/: ApiIntegration.tsx  Cameras.tsx  Dashboard.tsx  Detections.tsx  LiveView.tsx  Models.tsx  Settings.tsx
visionguard/server/: routes.ts  storage.ts
visionguard/shared/: schema.ts
vms-lite/: CMakeLists.txt  GEMINI.md  IMPLEMENTATION_PLAN.md  PATH_RESOLUTION.md  vms-lite.service
vms-lite/gui/assets/: index-DDWAeygk.css  index-Dfqklurc.js
vms-lite/packaging/: postinst  postrm  prerm
vms-lite/src/: main.cpp
vms-lite/src/adapters/capture/: OpenCVStreamAdapter.cpp  OpenCVStreamAdapter.hpp
vms-lite/src/adapters/inference/: DarkHelpInferenceAdapter.cpp  DarkHelpInferenceAdapter.hpp
vms-lite/src/adapters/mock/: MockAdapters.hpp
vms-lite/src/adapters/network/: CrowRestServer.cpp  CrowRestServer.hpp
vms-lite/src/adapters/storage/: SQLiteCameraRepository.cpp  SQLiteCameraRepository.hpp
vms-lite/src/application/: StreamManager.cpp  StreamManager.hpp  WebhookService.cpp  WebhookService.hpp
vms-lite/src/domain/: Entities.hpp
vms-lite/src/ports/: ICameraRepository.hpp  IInferenceService.hpp  IStreamSource.hpp
vms-lite/tests/: StreamManagerTest.cpp
yoloweights/peoplerpeople/: people.cfg
